; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/ggate/ggatec/extr_ggatec.c_mydaemon.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/ggate/ggatec/extr_ggatec.c_mydaemon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_gate_verbose = common dso_local global i64 0, align 8
@action = common dso_local global i64 0, align 8
@CREATE = common dso_local global i64 0, align 8
@unit = common dso_local global i32 0, align 4
@EXIT_FAILURE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"Cannot daemonize\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @mydaemon to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mydaemon() #0 {
  %1 = load i64, i64* @g_gate_verbose, align 8
  %2 = icmp sgt i64 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %18

4:                                                ; preds = %0
  %5 = call i64 @daemon(i32 0, i32 0)
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %4
  br label %18

8:                                                ; preds = %4
  %9 = load i64, i64* @action, align 8
  %10 = load i64, i64* @CREATE, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %15

12:                                               ; preds = %8
  %13 = load i32, i32* @unit, align 4
  %14 = call i32 @g_gate_destroy(i32 %13, i32 1)
  br label %15

15:                                               ; preds = %12, %8
  %16 = load i32, i32* @EXIT_FAILURE, align 4
  %17 = call i32 @err(i32 %16, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  br label %18

18:                                               ; preds = %15, %7, %3
  ret void
}

declare dso_local i64 @daemon(i32, i32) #1

declare dso_local i32 @g_gate_destroy(i32, i32) #1

declare dso_local i32 @err(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
